# cse-587-final

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
configs/: train_base.yaml
data/: metanetx_test.csv  metanetx_test_clean.csv  metanetx_val.csv  metanetx_val_clean.csv
forward_reaction_prediction/: fg_tokenizer.py  fgkg.pkl  fgkg_builder.py  kg_conditioned_model.py  kg_embeddings.py  run_and_evaluate_all.py  run_finetune_kg.sh  submit_finetune.sh  submit_longt5.sh  weight_transfer.py
recap/: __init__.py  cli.py
recap/data/: __init__.py  dataset.py  tokenizer.py
recap/evaluation/: __init__.py  metrics.py
recap/models/: __init__.py  completer.py  kg.py  reaction_t5.py
recap/utils/: __init__.py  chemistry.py
tests/: __init__.py  test_completer.py  test_dataset.py  test_kg.py
